--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -188,3 +188,145 @@ backward <- ols_step_backward_aic(testmodel)
 # Hypothesis Tests + Confidence Intervals
 
 # Conclusion
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+```{r}
+finalhard <- lm(num ~ winner_age +winner_seed +winner_ht +winner_rank +aceCent +doubleFaultsCent +servicePercentageCent +firstServeInCent +firstServeWonCent +secondServeWonCent +savedGamesCent+breakPointSavedCent+breakPointFacedCent+minutesCent,data = hard)
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
