--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -237,66 +237,62 @@ To begin our regression models, we will
 
 
 
+```{r}
+hard
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+testhard <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + mean_w_df + mean_w_svpt + mean_w_1stIn + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpSaved + mean_w_bpFaced + mean_minutes, data = hard)
+tidy(testhard)
+```
 
 ```{r}
-finalhard <- lm(num ~ winner_age +winner_seed +winner_ht +winner_rank +aceCent +doubleFaultsCent +servicePercentageCent +firstServeInCent +firstServeWonCent +secondServeWonCent +savedGamesCent+breakPointSavedCent+breakPointFacedCent+minutesCent,data = hard)
-
+backward <- ols_step_backward_aic(testmodel)
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
