--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -235,26 +235,65 @@ To begin our regression models, we will
 
 
 
-
+## Hard
 
 ```{r}
-hard
-
 testhard <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + mean_w_df + mean_w_svpt + mean_w_1stIn + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpSaved + mean_w_bpFaced + mean_minutes, data = hard)
 tidy(testhard)
 ```
 
 ```{r}
-backward <- ols_step_backward_aic(testmodel)
+backward <- ols_step_backward_aic(testhard)
 ```
 
+```{r}
+testhardnew <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + mean_w_svpt + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpFaced + mean_minutes, data = hard)
+tidy(testhardnew)
+```
 
+```{r}
+pairs(num ~ winner_seed + winner_ht + winner_age + winner_rank + mean_w_svpt + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpFaced + mean_minutes, data = hard)
+```
 
+## Clay
 
+```{r}
+testclay <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + mean_w_df + mean_w_svpt + mean_w_1stIn + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpSaved + mean_w_bpFaced + mean_minutes, data = clay)
+tidy(testclay)
+```
 
+```{r}
+backward <- ols_step_backward_aic(testclay)
+```
 
+```{r}
+testclaynew <- lm(num ~ winner_seed + winner_ht + winner_rank + mean_w_df + mean_w_svpt + mean_w_1stIn + mean_w_SvGms + mean_w_bpSaved +  mean_minutes, data = clay)
+tidy(testclaynew)
+```
 
+```{r}
+pairs(num ~ winner_seed + winner_ht + winner_rank + mean_w_df + mean_w_svpt + mean_w_1stIn + mean_w_SvGms + mean_w_bpSaved +  mean_minutes, data = clay)
+```
 
+## Grass
+
+```{r}
+testgrass <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + mean_w_df + mean_w_svpt + mean_w_1stIn + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpSaved + mean_w_bpFaced + mean_minutes, data = grass)
+tidy(testgrass)
+```
+
+```{r}
+backward <- ols_step_backward_aic(testgrass)
+```
+
+```{r}
+testgrassnew <- lm(num ~ winner_seed + winner_ht + winner_rank + mean_w_svpt + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpFaced + mean_minutes, data = hard)
+tidy(testgrassnew)
+```
+
+```{r}
+pairs(num ~ winner_seed + winner_ht + winner_rank + mean_w_svpt + mean_w_1stWon + mean_w_2ndWon + mean_w_SvGms + mean_w_bpFaced + mean_minutes, data = hard)
+```
 
 
 
