--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -12,6 +12,7 @@ library(tidyverse)
 library(olsrr)
 library(cowplot)
 library(car)
+library(broom)
 ```
 
 ```{r message=FALSE, include=FALSE}
@@ -194,14 +195,32 @@ To begin our regression models, we will
 ```{r}
 hardcourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
         mean_w_df + mean_w_svpt + mean_w_bpSaved, data=hard)
+
 claycourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
         mean_w_df + mean_w_svpt + mean_w_bpSaved, data=clay)
+
 grasscourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
         mean_w_df + mean_w_svpt + mean_w_bpSaved, data=grass)
 ```
 
 ```{r}
-#backward <- ols_step_backward_aic(testmodel)
+hardback <- ols_step_backward_aic(hardcourtmodel)
+newhardcourtmodel <- lm(num ~ winner_seed + winner_ht + winner_rank + 
+        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=hard)
+tidy(newhardcourtmodel)
+```
+
+```{r}
+clayback <- ols_step_backward_aic(claycourtmodel)
+newclaycourtmodel <- lm(num ~ winner_seed + winner_ht + winner_rank + mean_w_svpt + mean_w_bpSaved, data=clay)
+tidy(newclaycourtmodel)
+```
+```{r}
+anova(newhardcourtmodel,newclaycourtmodel)
+```
+
+```{r}
+grassback <- ols_step_backward_aic(grasscourtmodel)
 ```
 
 # Linear Regression Assumptions
