--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -96,9 +96,52 @@ winners_set <- winners_set[!myvars]
 ```
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # Exploratory Data Analysis 
 
-To begin our exploratory data analysis, we will examine the matrix plots for all three court surfaces, with the response variable being `num` and all other variables we deemed important in our proposal.
+To begin our exploratory data analysis, we will examine the matrix plot with all of the variables we said we would consider in our proposal.
 
 ## Matrix Plot
 ```{r fig.height=11, fig.width=11}
@@ -108,17 +151,15 @@ pairs(num ~ winner_seed + winner_ht + winner_age + winner_rank +
         mean_minutes, data=winners_set, pch = 16,
       main = "Matrix of scatterplots for Tournament Wins and Variables")
 ```
+
+The variables that we decided to remove are `mean_w_1stIn`, `mean_w_1stWon`, `mean_w_2ndWon`, `
+
 # Linear Regression
 
 To begin our regression models, we will
 
 ```{r}
-hardcourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
-        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=hard)
-claycourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
-        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=clay)
-grasscourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
-        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=grass)
+
 ```
 
 
