--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -113,14 +113,19 @@ pairs(num ~ winner_seed + winner_ht + winner_age + winner_rank +
 To begin our regression models, we will
 
 ```{r}
-hardcourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
-        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=hard)
-claycourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
-        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=clay)
-grasscourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
-        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=grass)
+fullmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
+        mean_w_df + mean_w_svpt + mean_w_bpSaved + surface, data=winners_set)
+tidy(fullmodel)
 ```
 
+```{r}
+backwards <- ols_step_backward_aic(fullmodel)
+```
+
+```{r fig.height=11, fig.width=11}
+pairs(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
+        mean_w_df + mean_w_svpt + mean_w_bpSaved, data=winners_set, pch = 16)
+```
 
 
 # Linear Regression Assumptions
@@ -128,5 +133,11 @@ grasscourtmodel <- lm(num ~ winner_seed + winner_ht + winner_age + winner_rank +
 # Hypothesis Tests + Confidence Intervals
 
 # Conclusion
+
+
+
+
+
+
 
 
