--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -3,8 +3,8 @@ title: "Project"
 author: "Steven Herrera and Ethan Shen"
 date: "11/09/2018"
 output:
-  html_document: default
   pdf_document: default
+  html_document: default
 ---
 
 ```{r load-packages, message=FALSE}
@@ -52,10 +52,7 @@ winners2010 <- atp2010 %>%
 
 winners <- rbind(winners2017, winners2016, winners2015, winners2014, winners2013, 
                  winners2012, winners2011, winners2010)
-```
 
-
-```{r}
 winners_set <- winners %>%
   filter(best_of == 3,
          !is.na(w_ace), 
@@ -67,9 +64,7 @@ winners_set <- winners %>%
          !is.na(w_SvGms), 
          !is.na(w_bpSaved),
          !is.na(w_bpFaced))
-```
 
-```{r}
 winners <- winners_set %>%
   mutate(seed = winner_seed,
          name = winner_name,
@@ -88,8 +83,30 @@ winners <- winners_set %>%
          bpSaved = w_bpSaved,
          bpFaced = w_bpFaced,
          minutes = minutes,
-         status = "winner"
-         )
+         status = 1
+         ) %>%
+  select(tourney_id,
+         tourney_name,
+         surface,
+         tourney_date,
+         round,
+         minutes,
+         name,
+         hand,
+         ht,
+         age,
+         rank,
+         rankpoints,
+         ace,
+         df,
+         svpt,
+         firsstIn,
+         firsttWon,
+         secondndWon,
+         SvGms,
+         bpSaved,
+         bpFaced,
+         status)
 
 
 losers <- winners_set %>%
@@ -110,29 +127,71 @@ losers <- winners_set %>%
          bpSaved = l_bpSaved,
          bpFaced = l_bpFaced,
          minutes = minutes,
-         status = "loser"
-         )
+         status = 0
+         ) %>%
+  select(tourney_id,
+         tourney_name,
+         surface,
+         tourney_date,
+         round,
+         minutes,
+         name,
+         hand,
+         ht,
+         age,
+         rank,
+         rankpoints,
+         ace,
+         df,
+         svpt,
+         firsstIn,
+         firsttWon,
+         secondndWon,
+         SvGms,
+         bpSaved,
+         bpFaced,
+         status)
 
 tennis <- rbind(winners,losers)
 ```
+
+# Data 
+
+Using data manipulation skills in R, we shaped the dataset to show each observation as the outcome of the match for the winner and the loser of each match from 2010-2017. Below, is a glimpse of our dataset.
 
 ```{r}
 glimpse(tennis)
 ```
 
+Because we have 30,146 observations, we will randomly select observations to be included in a smaller dataset so that we can effectively examine exploratory data analysis. Below, is our code on how we randomly selected the observations in our new dataset.
+
+```{r}
+set.seed(1234)
+ten <- tennis %>% sample_n(1000)
+```
+
+Here is what our new dataset looks like:
+
+```{r}
+glimpse(ten)
+```
+
 # Exploratory Data Analysis 
 
-To begin our exploratory data analysis, we will examine the matrix plots for all three court surfaces, with the response variable being `num` and all other variables we deemed important in our proposal.
+To begin our exploratory data analysis, we will examine a matrix plot of the variables in our dataset to consider multicollinearity.
 
 ## Matrix Plot
 ```{r fig.height=11, fig.width=11}
-pairs(num ~ winner_seed + winner_ht + winner_age + winner_rank + 
-        mean_w_df + mean_w_svpt + mean_w_1stIn + mean_w_1stWon + 
-        mean_w_2ndWon + mean_w_SvGms + mean_w_bpSaved + mean_w_bpFaced + 
-        mean_minutes, data=winners_set, pch = 16,
+ten <- ten %>%
+  mutate(status = as.factor(status))
+
+pairs(status ~ minutes + ht + age + rank + rankpoints + ace +
+        df + svpt + firsstIn + firsttWon + secondndWon + 
+        SvGms + bpSaved + bpFaced, data=ten, pch = 16,
       main = "Matrix of scatterplots for Tournament Wins and Variables")
 ```
-# Linear Regression
+
+# Logistic Regression Model
 
 To begin our regression models, we will
 
@@ -152,9 +211,9 @@ pairs(num ~ winner_seed + winner_ht + winner_age + winner_rank +
 ```
 
 
-# Linear Regression Assumptions
+# Model Assessment
 
-# Hypothesis Tests + Confidence Intervals
+# Prediction
 
 # Conclusion
 
